k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easystock-api-svc
  namespace: easystock
  labels:
    app: easystock-api
spec:
  type: ClusterIP
  selector:
    app: easystock-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
